@@ -9,9 +9,63 @@ use Method::Signatures;
 use Carp qw(croak);
 use POSIX qw(tzset);
 
-# ABSTRACT: Core Exobrain accessor class
+# ABSTRACT: Automate your life with Exobrain
 
 # VERSION: Generated by DZP::OurPkg:Version
+
+=head1 SYNOPSIS
+
+    use Exobrain;
+
+    my $exobrain = Exobrain->new;
+
+    $exobrain->notify("Hello World");
+
+
+=head1 DESCRIPTION
+
+Exobrain is a collection of agents which collect, classify, and act
+upon data. They share a common bus for communication. Think of it as
+IFTTT, but free, open source, and *you* keep control of your privacy.
+
+Examples of things that exobrain can currently do:
+
+=over
+
+=item *
+
+Give you XP in HabitRPG when you update your beeminder goals
+
+=item *
+
+Let others add items to your RememberTheMilk ToDo lists via twitter
+
+=item *
+
+Update beeminder by checking your inbox sizes using IMAP
+
+=item *
+
+Reward with HabitRPG XP you for responding to email
+
+=item *
+
+Automatically log life events to idonethis
+
+=back
+
+You can find out more information about Exobrain, including the
+full README, install instructions, current development, and more
+L<on github|https://github.com/pjf/exobrain>. In particular,
+L<the README|https://github.com/pjf/exobrain/blob/master/README.md>
+is strongly suggested reading.
+
+The following are methods provided by the top-level Exobrain object:
+
+=cut
+
+# This forms the top-level Exobrain dispatch class. It's mostly
+# lazy attributes, and nice sugar for doing common operations.
 
 use Exobrain::Bus;
 use Exobrain::Config;
